--- a/pytest.ini
+++ b/pytest.ini
@@ -1,8 +1,5 @@
 [pytest]
 env =
-  INSTA_USERNAME=username
-  INSTA_PASSWORD=password
-  INSTA_DEBUG=False
-  VERIFY_SSL=True
-  http_proxy=
-  https_proxy=
+  D:BETAMAX_RECORD_MODE=none
+  D:INSTA_USERNAME=<INSTA_USERNAME>
+  D:INSTA_PASSWORD=<INSTA_PASSWORD>
