--- a/onegram/default-settings.yml
+++ b/onegram/default-settings.yml
@@ -18,10 +18,6 @@ rate_persist:
   enabled: true
   directory: './onegram/rates'
 
-log_settings:
-  format: '%(levelname)s:%(name)s: %(message)s'
-  # level: INFO # default: change to DEBUG if 'debug' equals true
-
 query_chunks:
   following: [20, 10]
   followers: [20, 10]
@@ -31,3 +27,7 @@ query_chunks:
   comments:
     choices: [range: [20, 40]]
   explore: 24
+
+log:
+  format: '%(levelname)s:%(name)s: %(message)s'
+  # level: INFO # default: change to DEBUG if 'debug' equals true
