--- a/pytest.ini
+++ b/pytest.ini
@@ -3,4 +3,4 @@ env =
   D:INSTA_USERNAME=INSTA_USERNAME
   D:INSTA_PASSWORD=INSTA_PASSWORD
   D:ONEGRAM_TEST_RECORD_MODE=none
-  D:ONEGRAM_TEST_USERNAME=<me>
+  D:ONEGRAM_TEST_USERNAME=instagram
