Add betamax record mode to pytest.ini

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,4 @@ env =
   D:INSTA_USERNAME=INSTA_USERNAME
   D:INSTA_PASSWORD=INSTA_PASSWORD
   D:ONEGRAM_TEST_USERNAME=noeloquence
+  D:ONEGRAM_TEST_RECORD_MODE=none
